<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/error_image_width"
        android:layout_height="@dimen/error_image_height"
        android:contentDescription="@string/item_alert"
        app:srcCompat="@drawable/ic_alert"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/error_message"
        android:textColor="@color/grey"
        android:textSize="@dimen/error_description_size"/>

    <Button
        android:id="@+id/retry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/error_button_height"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/error_try_again"
        android:textColor="@color/accent"
        android:textSize="16sp"/>

</LinearLayout>
