<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/price_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="40dp"
        android:hint="@string/price_hint"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="34sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/action"
        style="@style/BtnPrimary"
        android:text="@string/price_next"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
