<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:text="@string/popup_title"
        android:textColor="@color/card"
        android:textSize="@dimen/popup_title_size"
        android:textStyle="bold"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/popup_image_height"
        android:contentDescription="@string/popup_image"
        app:srcCompat="@drawable/img_purchase_success"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/popup_subtitle"
        android:textColor="@color/card"
        android:textSize="@dimen/popup_subtitle_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/card"
        android:textSize="@dimen/popup_description_size"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".3"/>

    <Button
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/popup_button_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_payment_done"
        android:text="@string/popup_go_home"
        android:textColor="@android:color/white"
        android:textSize="@dimen/popup_button_size"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"/>

</LinearLayout>
